--- a/ConsoleCalc/ConsoleCalc.csproj
+++ b/ConsoleCalc/ConsoleCalc.csproj
@@ -49,17 +49,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Division.cs" />
-    <Compile Include="IExecutable.cs" />
-    <Compile Include="MathOperation.cs" />
-    <Compile Include="Multiplication.cs" />
-    <Compile Include="Operations.cs" />
-    <Compile Include="Parser.cs" />
+    <Compile Include="Operations\Division.cs" />
+    <Compile Include="Operations\IExecutable.cs" />
+    <Compile Include="Operations\MathOperation.cs" />
+    <Compile Include="Operations\Multiplication.cs" />
+    <Compile Include="Operations\Operations.cs" />
+    <Compile Include="ParsingCalculator\ParsingCalculator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Subtraction.cs" />
-    <Compile Include="Summation.cs" />
-    <Compile Include="SyntaxException.cs" />
+    <Compile Include="Operations\Subtraction.cs" />
+    <Compile Include="Operations\Summation.cs" />
+    <Compile Include="ParsingCalculator\SyntaxException.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
